# doc-knowledge

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: README.md  cli-reference.md  quick-start.md  troubleshooting.md  usage-guide.md
docs-project/: README.md
docs-project/01-product-concept/: 01-产品需求文档.md  README.md
docs-project/03-architecture/: 01-系统架构设计.md
docs-project/04-detailed-design/: 01-CLI设计规范.md  02-转换器设计.md  03-提取器设计.md  04-技术选型与方案.md  05-Phase2详细设计.md  06-图片识别设计.md  07-Web UI设计.md  08-OCR统一管道设计.md  README.md
docs-project/05-development-plan/: 01-Phase1开发计划.md  02-Phase2开发计划.md  03-Phase4开发计划.md  04-Phase5开发计划.md
docs-project/06-test-docs/: 01-Phase2测试报告.md  02-Phase3测试补充计划.md  03-测试审计报告.md  04-测试工作流规范.md  05-Phase4多维度测试报告.md  05-多维度测试报告.md
src/doc_knowledge/: __init__.py  __main__.py  cli.py  config.py  injector.py  utils.py  vision.py  webui.py
src/doc_knowledge/cli/: __init__.py  _helpers.py  _options.py  convert.py  export.py  extract.py  pipeline.py  webui.py
test-docs/: price-history.csv
tests/: __init__.py  test_base_converter.py  test_boundaries.py  test_cli_coverage.py  test_cli_options_e2e.py  test_config.py  test_converter.py  test_converter_base.py  test_converters_init.py  test_deduplicator.py  test_docx_converter.py  test_e2e_full_pipeline.py  test_error_handling.py  test_exporter.py  test_injector.py  test_integration.py  test_memomind_export.py  test_memomind_http_integration.py  test_memomind_post.py  test_ocr_local.py  test_ocr_service.py  test_pdf_converter.py  test_pdf_ocr.py  test_phase2.py  test_scorer.py  test_tagger.py  test_tdd_and_prove_it.py  test_utils.py  test_vision.py  test_webui.py
(+18 files in other folders)
